--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
     },
     "config": {
       "classmap-authoritative": true
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.3"
     }
 }
