Suggest fix for path or alias for newly used class.
StringBasedPHPFileInfo::getFixForNewClassUsage(...)
with unit test for many cases.

Method is still not aware potential conflict
with another classes from the current namespace
because StringBasedPHPFileInfo has still not dependency
of class info repository.

Example when the class of the current file
is \PHPCD\Fixtures\ClassNamesAndAliases\Services\Image:
echo rpcrequest(g:phpid_channel_id, 'getFixForNewClassUsage', expand('%:p'), {'alias':'Image3','full_path':'\PHPCD\Fixtures\Example1\Models\Image'})

TODO: utilizing the response on vim side (autocmd CompleteDone).

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "autoload": {
         "psr-4": {"PHPCD\\": "php/"}
     },
+    "autoload-dev": {
+        "psr-4": {"PHPCD\\": "tests/php/"}
+    },
     "require": {
         "psr/log": "1.0.0"
     },
