--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "psr-4": {"PHPCD\\": "php/"}
     },
     "require": {
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "lvht/msgpack-rpc": "dev-master"
     },
     "config": {
       "classmap-authoritative": true
