--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
     },
     "require": {
         "psr/log": "^1.0",
-        "lvht/msgpack-rpc": "dev-master"
+        "lvht/msgpack-rpc": "dev-master",
+        "symfony/dependency-injection": "^3.0",
+        "symfony/config": "^3.0",
+        "symfony/yaml": "^3.0"
     },
     "config": {
       "classmap-authoritative": true
