--- a/config/phpcd.yml
+++ b/config/phpcd.yml
@@ -7,7 +7,7 @@ services:
 
     handler.phpcd:
         class:              \PHPCD\PHPCD
-        arguments:          ['%root%', '@default_logger', '@default_pattern_matcher', '@file_info_factory']
+        arguments:          ['%root%', '@default_logger', '@class_info_factory', '@file_info_factory']
 
     server.phpcd:
         class:              Lvht\MsgpackRpc\ForkServer
