--- a/config/phpid.yml
+++ b/config/phpid.yml
@@ -4,7 +4,7 @@ imports:
 services:
     classes_repository:
         class:              \PHPCD\ClassInfo\ComposerClassmapFileRepository
-        arguments:          ['%root%', '@default_pattern_matcher', '@class_info_factory', '@default_logger']
+        arguments:          ['%root%', '%class_loader%', '@default_pattern_matcher', '@class_info_factory', '@default_logger']
 
     handler.phpid:
         class:              \PHPCD\PHPID
