Validate file before returning class info by repository
It is very slow in this form and it requires
caching results.

--- a/config/common.yml
+++ b/config/common.yml
@@ -38,6 +38,9 @@ services:
         class:              Lvht\MsgpackRpc\StdIo
         autowiring_types:   Lvht\MsgpackRpc\Io
 
+    file_info_factory:
+        class:              \PHPCD\PHPFileInfo\PHPFileInfoFactory
+
     class_info_factory:
         class:              \PHPCD\ClassInfo\ClassInfoFactory
         arguments:          ['@default_pattern_matcher']
