--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
       "classmap-authoritative": true
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.3"
+        "phpunit/phpunit": "^5.3",
+        "mockery/mockery": "^0.9.5"
     }
 }
