--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.3",
-        "mockery/mockery": "^0.9.5"
+        "mockery/mockery": "~1.0@dev"
     }
 }
