--- a/config/phpcd.yml
+++ b/config/phpcd.yml
@@ -7,6 +7,7 @@ services:
 
     nsinfo:
         class:              \PHPCD\NamespaceInfo
+        factory:            ['@phpcd_factory', 'createNamespaceInfo']
         arguments:
             - '%root%'
 
