--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.3",
-        "mockery/mockery": "~1.0@dev"
+        "mockery/mockery": "*"
     }
 }
