Fixed functions and constants completion

--- a/config/phpcd.yml
+++ b/config/phpcd.yml
@@ -31,6 +31,7 @@ services:
         arguments:
             - '@nsinfo'
             - '@default_logger'
+            - '@repository.constant'
             - '@repository.constant.class'
             - '@property_info_repository'
             - '@method_info_repository'
