--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
       "classmap-authoritative": true
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.3",
-        "mockery/mockery": "*"
+        "phpunit/phpunit": ">=6.0.6",
+        "mockery/mockery": "dev-master"
     }
 }
