--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "phpvim/phpcd.vim",
+    "name": "przepompownia/phpcd.vim",
     "authors": [
         {
             "name": "Tomasz Nowiński"
@@ -16,6 +16,7 @@
         "psr-4": {"tests\\": "tests/php/"}
     },
     "require": {
+        "php": "^5.5||^7.0",
         "psr/log": "^1.0",
         "lvht/msgpack-rpc": "^0.2",
         "symfony/dependency-injection": "^3.0",
