--- a/config/services.yml
+++ b/config/services.yml
@@ -1,9 +1,5 @@
-parameters:
-    completion_case_sensitivity:       false
-    completion_match_type:             'head_or_subsequence_of_last_part'
-    logger_implementation:             '\Monolog\Logger'
-    logger_parameters:                 []
-    messenger:                         null
+imports:
+    - { resource: parameters.yml }
 
 services:
     phpcd_factory:
