--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
       "classmap-authoritative": true
     },
     "require-dev": {
-        "phpunit/phpunit": ">=6.0.6",
+        "phpunit/phpunit": "^6",
         "mockery/mockery": "dev-master"
     },
     "scripts": {
